## Changes in v1.6 ##

TestOverdispersion now prints a helpful suggestion for which overdispersion
parameter to use, as well as returning that value in its output.
The use of qqman has been eliminated from the vignettes.

A bug has been fixed in Export_GWASpoly so that special characters in sample
names are not converted to periods.

## Changes in v1.5 ##

SimGenotypesMapping, ExpectedHindHeMapping, Export_polymapR_probs,
reverseComplement, and readDArTag functions added.

Bug fixed in GetProbableGenotypes when there are multiple possiblePloidies and
multiallelic is set to "na" or "correct".

Bug fixed in process_sam_multi.py for cases where sample names contain spaces.

Bug fixed in HindHeMapping when loci are discarded due to difficulty estimating
parental genotypes.

Vignettes have been updated with a figure to assist in estimating inbreeding.

## Changes in v1.4 ##

Export_GWASpoly can now export posterior mean genotypes.

Export_adegenet_genind function added.

## Changes in v1.3 ##

Added the ExpectedHindHe, SimGenotypes, and SimAlleleDepth functions.  The
first in particular is intended to help the user to select a Hind/He threshold
for filtering markers.

Added the Export_Structure function.

In the variant calling pipeline, process_isoloci.py has been modified so that
the user can set an expected and maximum Hind/He. The previous functionality,
where these thresholds were calculated automatically from inbreeding, remains
available.

Fixed a bug in VCF2RADdata that would occur if expectedAlleles or expectedLoci
were set too low.  VCF2RADdata now also sets the "Variable_sites_only" attribute
to be FALSE if phaseSNPs = FALSE.

Fixed a bug in SubsetByLocus, MergeRareHaplotypes, and MergeIdenticalHaplotypes
that would delete the "Variable_sites_only" attribute, preventing VCF export.

## Changes in v1.2 ##

The functions HindHe and HindHeMapping have been added, to assist with filtering