@@ -25,12 +25,14 @@ but are provided at the user level since they may be more broadly useful.
 }
 \usage{
 ExpectedHindHe(object, ploidy = object$possiblePloidies[[1]], inbreeding = 0,
-               overdispersion = 20, reps = ceiling(5000/nLoci(object)),
+               overdispersion = 20, contamRate = 0,
+               reps = ceiling(5000/nLoci(object)),
                quiet = FALSE, plot = TRUE)
 
 ExpectedHindHeMapping(object, ploidy = object$possiblePloidies[[1]],
                       n.gen.backcrossing = 0, n.gen.selfing = 0,
-                      overdispersion = 20, freqAllowedDeviation = 0.05, 
+                      overdispersion = 20, contamRate = 0,
+                      freqAllowedDeviation = 0.05, 
                       minLikelihoodRatio = 10, reps = ceiling(5000/nLoci(object)),
                       quiet = FALSE, plot = TRUE)
 
@@ -39,7 +41,7 @@ SimGenotypes(alleleFreq, alleles2loc, nsam, inbreeding, ploidy)
 SimGenotypesMapping(donorGen, recurGen, alleles2loc, nsam, ploidy,
                     n.gen.backcrossing, n.gen.selfing)
 
-SimAlleleDepth(locDepth, genotypes, alleles2loc, overdispersion = 20)
+SimAlleleDepth(locDepth, genotypes, alleles2loc, overdispersion = 20, contamRate = 0)
 }
 \arguments{
   \item{object}{
@@ -57,6 +59,10 @@ self-fertilization, etc.) and can be estimated with \code{InbreedingFromHindHe}.
 Overdispersion parameter as described in \code{\link{AddGenotypeLikelihood}}.
 Lower values will cause allelic read depth distributions to deviate further from
 expectations based on allele copy number.
+}
+  \item{contamRate}{
+Sample cross-contamination rate to simulate.  Although 0 is the default, 0.001
+is also reasonable.
 }
   \item{reps}{
 The number of times to simulate the data and estimate \eqn{H_{ind}/H_E}{Hind/He}.
