@@ -5,6 +5,11 @@
 
 using namespace Rcpp;
 
+#ifdef RCPP_USE_GLOBAL_ROSTREAM
+Rcpp::Rostream<true>&  Rcpp::Rcout = Rcpp::Rcpp_cout_get();
+Rcpp::Rostream<false>& Rcpp::Rcerr = Rcpp::Rcpp_cerr_get();
+#endif
+
 // AdjustAlleleFreq
 NumericMatrix AdjustAlleleFreq(NumericMatrix predAl, IntegerVector alleles2loc, double minfreq);
 RcppExport SEXP _polyRAD_AdjustAlleleFreq(SEXP predAlSEXP, SEXP alleles2locSEXP, SEXP minfreqSEXP) {
@@ -228,8 +233,8 @@ BEGIN_RCPP
 END_RCPP
 }
 // simAD
-IntegerMatrix simAD(IntegerMatrix locDepth, NumericMatrix genotypes, IntegerVector alleles2loc, double overdispersion);
-RcppExport SEXP _polyRAD_simAD(SEXP locDepthSEXP, SEXP genotypesSEXP, SEXP alleles2locSEXP, SEXP overdispersionSEXP) {
+IntegerMatrix simAD(IntegerMatrix locDepth, NumericMatrix genotypes, IntegerVector alleles2loc, double overdispersion, double contamRate, NumericVector alleleFreq);
+RcppExport SEXP _polyRAD_simAD(SEXP locDepthSEXP, SEXP genotypesSEXP, SEXP alleles2locSEXP, SEXP overdispersionSEXP, SEXP contamRateSEXP, SEXP alleleFreqSEXP) {
 BEGIN_RCPP
     Rcpp::RObject rcpp_result_gen;
     Rcpp::RNGScope rcpp_rngScope_gen;
@@ -237,7 +242,9 @@ BEGIN_RCPP
     Rcpp::traits::input_parameter< NumericMatrix >::type genotypes(genotypesSEXP);
     Rcpp::traits::input_parameter< IntegerVector >::type alleles2loc(alleles2locSEXP);
     Rcpp::traits::input_parameter< double >::type overdispersion(overdispersionSEXP);
-    rcpp_result_gen = Rcpp::wrap(simAD(locDepth, genotypes, alleles2loc, overdispersion));
+    Rcpp::traits::input_parameter< double >::type contamRate(contamRateSEXP);
+    Rcpp::traits::input_parameter< NumericVector >::type alleleFreq(alleleFreqSEXP);
+    rcpp_result_gen = Rcpp::wrap(simAD(locDepth, genotypes, alleles2loc, overdispersion, contamRate, alleleFreq));
     return rcpp_result_gen;
 END_RCPP
 }
@@ -272,7 +279,7 @@ static const R_CallMethodDef CallEntries[] = {
     {"_polyRAD_PrepVCFexport", (DL_FUNC) &_polyRAD_PrepVCFexport, 7},
     {"_polyRAD_simGeno", (DL_FUNC) &_polyRAD_simGeno, 5},
     {"_polyRAD_simGenoMapping", (DL_FUNC) &_polyRAD_simGenoMapping, 7},
-    {"_polyRAD_simAD", (DL_FUNC) &_polyRAD_simAD, 4},
+    {"_polyRAD_simAD", (DL_FUNC) &_polyRAD_simAD, 6},
     {"_polyRAD_ThirdDimProd", (DL_FUNC) &_polyRAD_ThirdDimProd, 3},
     {NULL, NULL, 0}
 };
